gcc/testsuite/rust/rustc/ui/terminal-width/whitespace-trimming.rs
// ignore-tidy-linelength

fn main() {
                                                                                                                                                                                    let _: () = 42;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

